deploy/templates/k8s/deploy-web.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: captioned-images-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      run: captioned-images-web
  template:
    metadata:
      labels:
        run: captioned-images-web
    spec:
      containers:
      - name: captioned-images-web
        image: us.gcr.io/${PROJECT_ID}/gke_demo:${COMMIT_SHA}
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: shared-assets
          mountPath: /data/public
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=${CONNECTION_NAME}=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      - name: nginx
        image: abevoelker/docker-nginx-alpine-brotli:mainline
        imagePullPolicy: Always
        args: ["nginx", "-c", "/etc/nginx/nginx.conf"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-confd
          mountPath: /etc/nginx/conf.d
        - name: shared-assets
          mountPath: /var/www/public
        readinessProbe:
          httpGet:
            path: /pulse
            port: 80
          periodSeconds: 3
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 10
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: cloudsql
        emptyDir:
      - name: ssl-certs
        hostPath:
          path: /etc/ssl/certs
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: nginx-confd
        configMap:
          name: nginx-confd
      - name: shared-assets
        emptyDir: {}
